[package]
name = "frontier_fs_fuse"
version = "0.1.0"
authors = ["Cimang Jiang <joshua.olin@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
frontier_fs = { path = "../frontier_fs" }

[profile.release]
debug = true
